tests/parsing/smtlib/v2.7/errors/127_selector_dec_bad_name_1.smt2
(set-logic ALL)
(declare-datatype foo ((A (_))))
